Добавил спецификацию record_set.rb

--- a/views/main.erb
+++ b/views/main.erb
@@ -32,7 +32,7 @@
           <td><%= record.mobile %></td>
           <td><%= record.phone %></td>
           <td><%= record.address %></td>
-          <td>
+          <td style="min-width: 93px">
             <a class="btn btn-primary btn-sm" href="edit/<%= index %>/<%= hash %>"><i class="fas fa-edit"></i></a>
             <a class="btn btn-danger btn-sm" href="remove/<%= index %>/<%= hash %>"><i class="fas fa-trash"></i></a>
           </td>
