Добавил костыль для сортировки

--- a/views/main.erb
+++ b/views/main.erb
@@ -1,8 +1,10 @@
 <div class="d-flex align-items-center justify-content-between">
   <h1>Записная книжка</h1>
   <div>
-    <a class="btn btn-success" href="add">+ Добавить</a>
-    <a class="btn btn-warning" href="create-event">Создать событие</a>
+    <a class="btn btn-secondary btn-sm" href="/sort-by-name">Сортировка по имени</a>
+    <a class="btn btn-secondary btn-sm" href="/sort-by-status">Сортировка по статусу</a>
+    <a class="btn btn-success btn-sm" href="add">+ Добавить</a>
+    <a class="btn btn-warning btn-sm" href="create-event">Создать событие</a>
   </div>
 </div>
 <% if records.to_a.empty? %>
