+ системные тесты для создания событий

--- a/views/event_creator.erb
+++ b/views/event_creator.erb
@@ -46,7 +46,7 @@
           Вставить адрес получателя в начало письма
         </label>
       </div>
-      <button type="submit" class="btn btn-primary">Создать пришлашения</button>
+      <button type="submit" class="btn btn-primary">Создать приглашения</button>
     </form>
   </div>
 </div>
